[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexrag"
version = "0.1.0"
description = "CortexRAG — Agentic RAG pipeline with local STT & TTS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["cortexrag", "rag", "stt", "tts", "llm", "ai", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # HTTP client
    "httpx>=0.27.0",
    # Data validation & settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    # RAG - Vector store & embeddings
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # RAG - Document loading & chunking
    "pypdf>=4.0.0",
    "langchain-text-splitters>=0.2.0",
    # STT - local Whisper transcription
    "faster-whisper>=1.0.0",
    # Audio capture
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    # TTS - Microsoft Edge TTS (free, no API key)
    "edge-tts>=6.1.10",
    # Audio playback
    "pygame>=2.5.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
cortexrag = "cortexrag.__main__:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
